fix alignment issues

--- a/packages/bpk-component-flare/src/bpk-content-bubble.module.scss
+++ b/packages/bpk-component-flare/src/bpk-content-bubble.module.scss
@@ -23,6 +23,7 @@
     width: 100%;
     align-items: flex-end;
     align-self: flex-end;
+    overflow: hidden;
   }
 
   &__wrapper {
